syntax = "proto3";

package proto;

option go_package = "systemSmartContracts";
option (gogoproto.stable_marshaler_all) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message DelegationManagement {
  uint32 NumOfContracts      = 1 [(gogoproto.jsontag) = "NumOfContracts"];
  bytes  LastAddress         = 2 [(gogoproto.jsontag) = "LastAddress"];
  uint64 MinServiceFee       = 3 [(gogoproto.jsontag) = "MinServiceFee"];
  uint64 MaxServiceFee       = 4 [(gogoproto.jsontag) = "MaxServiceFee"];
  bytes  MinDeposit          = 5 [(gogoproto.jsontag) = "MinDeposit", (gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go-core/data.BigIntCaster"];
  bytes  MinDelegationAmount = 6 [(gogoproto.jsontag) = "MinDelegationAmount", (gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go-core/data.BigIntCaster"];
}

message DelegationContractList {
  repeated bytes Addresses = 1 [(gogoproto.jsontag) = "Addresses"];
}

message DelegationConfig {
  bytes  MaxDelegationCap            = 1 [(gogoproto.jsontag) = "MaxDelegationCap", (gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go-core/data.BigIntCaster"];
  bytes  InitialOwnerFunds           = 2 [(gogoproto.jsontag) = "InitialOwnerFunds", (gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go-core/data.BigIntCaster"];
  bool   AutomaticActivation         = 3 [(gogoproto.jsontag) = "AutomaticActivation"];
  bool   ChangeableServiceFee        = 4 [(gogoproto.jsontag) = "ChangeableServiceFee"];
  uint64 CreatedNonce                = 5 [(gogoproto.jsontag) = "CreatedNonce"];
  uint32 UnBondPeriodInEpochs        = 6 [(gogoproto.jsontag) = "UnBondPeriodInEpochs"];
  bool   CheckCapOnReDelegateRewards = 7 [(gogoproto.jsontag) = "CheckCapOnReDelegateRewards"];
}

message DelegationMetaData {
  bytes Name       = 1 [(gogoproto.jsontag) = "Name"];
  bytes Website    = 2 [(gogoproto.jsontag) = "Website"];
  bytes Identifier = 3 [(gogoproto.jsontag) = "Identifier"];
}

message DelegationContractStatus {
  repeated NodesData StakedKeys    = 1 [(gogoproto.jsontag) = "StakedKeys"];
  repeated NodesData NotStakedKeys = 2 [(gogoproto.jsontag) = "NotStakedKeys"];
  repeated NodesData UnStakedKeys  = 3 [(gogoproto.jsontag) = "UnStakedKeys"];
  uint64             NumUsers      = 4 [(gogoproto.jsontag) = "NumUsers"];
}

message Fund {
  bytes  Value   = 1 [(gogoproto.jsontag) = "Value", (gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go-core/data.BigIntCaster"];
  bytes  Address = 2 [(gogoproto.jsontag) = "Address"];
  uint32 Epoch   = 3 [(gogoproto.jsontag) = "Epoch"];
  uint32 Type    = 4 [(gogoproto.jsontag) = "Type"];
}

message DelegatorData {
  bytes          ActiveFund              = 1 [(gogoproto.jsontag) = "ActiveFund"];
  repeated bytes UnStakedFunds           = 2 [(gogoproto.jsontag) = "UnStakedFunds"];
  uint32         RewardsCheckpoint       = 3 [(gogoproto.jsontag) = "RewardsCheckpoint"];
  bytes          UnClaimedRewards        = 4 [(gogoproto.jsontag) = "UnClaimedRewards", (gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go-core/data.BigIntCaster"];
  bytes          TotalCumulatedRewards = 5 [(gogoproto.jsontag) = "TotalCumulatedRewards", (gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go-core/data.BigIntCaster"];
}

message GlobalFundData {
  bytes TotalActive            = 1 [(gogoproto.jsontag) = "TotalActive", (gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go-core/data.BigIntCaster"];
  bytes TotalUnStaked          = 2 [(gogoproto.jsontag) = "TotalUnStaked", (gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go-core/data.BigIntCaster"];
}

message NodesData {
  bytes BLSKey    = 1 [(gogoproto.jsontag) = "BLSKey"];
  bytes SignedMsg = 2 [(gogoproto.jsontag) = "SignedMsg"];
}

message RewardComputationData {
  bytes  RewardsToDistribute = 1 [(gogoproto.jsontag) = "RewardsToDistribute", (gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go-core/data.BigIntCaster"];
  bytes  TotalActive         = 2 [(gogoproto.jsontag) = "TotalActive", (gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go-core/data.BigIntCaster"];
  uint64 ServiceFee          = 3 [(gogoproto.jsontag) = "ServiceFee"];
}
